--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -10,6 +10,11 @@ separator_block_width=15
 label=
 interval=5
 
+[email]
+command=$HOME/.dotfiles/scripts/unread_mails.sh
+label=
+interval=60
+
 [temperature]
 label=
 interval=50
