display an icon instead of MUTE with i3blocks

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -20,7 +20,7 @@ label=
 interval=50
 
 [volume]
-command=/usr/lib/i3blocks/volume
+command=v=`/usr/lib/i3blocks/volume`; if [ "$v" = "MUTE" ]; then echo " "; else echo "$v"; fi
 label=
 instance=Master
 #instance=PCM
