call xkb-switch directly from i3blocks.conf

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -23,17 +23,15 @@ interval=50
 command=v=`/usr/lib/i3blocks/volume`; if [ "$v" = "MUTE" ]; then echo " "; else echo "$v"; fi
 label=
 instance=Master
-#instance=PCM
 interval=1
 signal=10
-color=#C9CCDB
 
 [language]
-command=$HOME/.dotfiles/scripts/show-lang.sh
-interval=1
+command=echo " `xkb-switch`" | awk '{print toupper($0)}'
 label=
+interval=1
 
 [time]
 command=date '+ %a %d %b %H:%M'
-interval=1
 label=
+interval=1
