--- a/i3/config
+++ b/i3/config
@@ -3,8 +3,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:sans 10
-#font pango:DejaVu Sans Mono 10
+font pango:DejaVu Sans Mono, Awesome 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -63,18 +62,19 @@ bindsym $mod+a focus parent
 set $workspace1 "1 "
 set $workspace2 "2 "
 set $workspace3 "3 "
-set $workspace4 "4 "
-set $workspace5 "5 "
+set $workspace4 "4 "
+set $workspace5 "5 "
 set $workspace6 "6 "
 set $workspace7 "7 "
 set $workspace8 "8 "
-set $workspace9 "9 "
+set $workspace9 "9 "
 set $workspace10 "10 "
 
 # assign workspaces to applications
 assign [class="Firefox"] $workspace1
 assign [title="Popcorn Time"] $workspace10
 assign [class="stremio"] $workspace10
+for_window [class="Spotify"] move to workspace $workspace9
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -183,6 +183,7 @@ exec xset -dpms s off
 
 # startup programs
 exec firefox
+exec --no-startup-id i3-msg 'workspace $workspace5, exec pcmanfm, workspace $workspace1'
 exec --no-startup-id compton -f
 exec --no-startup-id "setxkbmap -layout us,gr -option grp:alt_shift_toggle"  # change keyboard layout
 exec_always feh --bg-scale $HOME/.dotfiles/i3/wallpaper.jpg                  # set custom walppaper
@@ -190,8 +191,9 @@ exec_always feh --bg-scale $HOME/.dotfiles/i3/wallpaper.jpg                  # s
 # application launch shortcuts
 bindsym Print exec gnome-screenshot
 bindsym $mod+c exec orage
-bindsym $mod+y workspace $workspace4, layout tabbed, exec pcmanfm
 
 # other
+bindsym $mod+Shift+f [class="Pcmanfm"] focus
+
 for_window [class="Lxappearance"] floating enable
 for_window [class="Orage"] floating enable
