--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -13,25 +13,25 @@ interval=5
 [email]
 command=$HOME/.dotfiles/scripts/unread_mails.sh
 label=
-interval=60
+interval=120
 
 [temperature]
 label=
-interval=50
+interval=60
 
 [volume]
-command=v=`/usr/lib/i3blocks/volume`; if [ "$v" = "MUTE" ]; then echo " "; else echo "$v"; fi
-label=
+command=v=`/usr/lib/i3blocks/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
 instance=Master
-interval=1
-signal=10
+interval=once
+signal=1
 
 [language]
 command=echo " `xkb-switch`" | awk '{print toupper($0)}'
 label=
-interval=1
+interval=once
+signal=1
 
 [time]
 command=date '+ %a %d %b %H:%M'
 label=
-interval=1
+interval=60
