--- a/i3/config
+++ b/i3/config
@@ -144,9 +144,9 @@ hide_edge_borders both
 
 # window colors
 #                        border         background     text           indicator
-client.focused           #000000        #000000        #FFFFFF        #000000
-client.focused_inactive  #333333        #333333        #FFFFFF        #000000
-client.unfocused         #333333        #333333        #FFFFFF        #333333
+client.focused           #333333        #333333        #FFFFFF        #000000
+client.focused_inactive  #262626        #262626        #595959        #000000
+client.unfocused         #262626        #262626        #595959        #000000
 
 bar {
     status_command i3blocks -c $HOME/.dotfiles/i3/i3blocks.conf
@@ -154,9 +154,9 @@ bar {
         background #333333
         statusline #AAAAAA
         separator  #757575
-        focused_workspace  #282828 #282828 #FFFFFF
+	focused_workspace  #000000 #282828 #FFFFFF
         inactive_workspace #333333 #333333 #AAAAAA
-        urgent_workspace   #E53935 #E53935  #f3f4f5
+	urgent_workspace   #E53935 #282828 #f3f4f5
     }
 }
 
