--- a/i3/config
+++ b/i3/config
@@ -169,12 +169,13 @@ mode "$mode_system" {
     bindsym l exec --no-startup-id i3lock --color "#333333", mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
 
-    # back to normal: Enter or Escape
+    # back to normal
+    bindsym Pause mode "default"
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
 
-bindsym $mod+Pause mode "$mode_system"
+bindsym Pause mode "$mode_system"
 
 # audio controls
 bindsym XF86AudioRaiseVolume exec amixer set Master 5%+ -q && pkill -RTMIN+1 i3blocks
