--- a/i3/config
+++ b/i3/config
@@ -213,4 +213,5 @@ bindsym $mod+Shift+f [class="Pcmanfm"] focus
 for_window [class="Lxappearance"] floating enable
 for_window [class="Orage"] floating enable
 for_window [class="PacketTracer*"] floating enable
+for_window [class="YaST2"] floating enable
 for_window [title="FF Multi Converter"] floating enable
