i3 - download i3blocks and i3blocks-contrib during installation

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -2,7 +2,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME
+command=~/.i3blocks/scripts/$BLOCK_NAME
 color=#C9CCDB
 separator_block_width=15
 
@@ -11,11 +11,12 @@ label=
 interval=5
 
 [temperature]
+command=~/.i3blocks-contrib/temperature/temperature
 label=
 interval=60
 
 [volume]
-command=v=`/usr/lib/i3blocks/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
+command=v=`~/.i3blocks/scripts/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
 instance=Master
 interval=once
 signal=1
