i3 - i3block's temperature script doesn't work properly

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -11,7 +11,8 @@ label=
 interval=5
 
 [temperature]
-command=~/.i3blocks-contrib/temperature/temperature
+#command=~/.i3blocks-contrib/temperature/temperature
+command=sensors | grep "Package id 0" | cut -d' ' -f5 | cut -c 2-
 label=
 interval=60
 
