i3 - update i3blocks.conf to comply with the new i3blocks upstream

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -2,7 +2,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=~/.i3blocks/scripts/$BLOCK_NAME
+command=~/.i3blocks-contrib/$BLOCK_NAME/$BLOCK_NAME
 color=#C9CCDB
 separator_block_width=15
 
@@ -11,13 +11,12 @@ label=
 interval=5
 
 [temperature]
-#command=~/.i3blocks-contrib/temperature/temperature
 command=sensors | grep "Package id 0" | cut -d' ' -f5 | cut -c 2-
 label=
 interval=60
 
 [volume]
-command=v=`~/.i3blocks/scripts/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
+command=v=`~/.i3blocks-contrib/volume/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
 instance=Master
 interval=once
 signal=1
