i3 - add battery section on i3blocks

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -15,6 +15,10 @@ command=sensors | grep "Package id 0" | cut -d' ' -f5 | cut -c 2-
 label=
 interval=60
 
+[battery2]
+markup=pango
+interval=120
+
 [volume]
 command=v=`~/.i3blocks-contrib/volume/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
 instance=Master
