--- a/i3/config
+++ b/i3/config
@@ -171,6 +171,10 @@ bindsym XF86AudioRaiseVolume exec amixer set Master 5%+ -q && pkill -RTMIN+1 i3b
 bindsym XF86AudioLowerVolume exec amixer set Master 5%- -q && pkill -RTMIN+1 i3blocks
 bindsym XF86AudioMute exec amixer set Master toggle -q && pkill -RTMIN+1 i3blocks
 
+# screen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10 && pkill -RTMIN+1 i3blocks
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10 && pkill -RTMIN+1 i3blocks
+
 # disable screensaver
 exec xcreensaver -no-splash
 exec xset -dpms s off
@@ -178,6 +182,7 @@ exec xset -dpms s off
 # startup programs
 exec firefox
 exec --no-startup-id i3-msg 'workspace $workspace5, exec pcmanfm, workspace $workspace1'
+exec --no-startup-id nm-applet
 exec --no-startup-id compton -f
 exec --no-startup-id redshift -l 40.6:22.9 -t 6500:3500
 exec_always feh --bg-scale $HOME/.dotfiles/i3/wallpaper.jpg # set custom walppaper
