i3 - add commented out i3blocks sections for laptop

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -15,9 +15,15 @@ command=sensors | grep "Package id 0" | cut -d' ' -f5 | cut -c 2-
 label=
 interval=60
 
-[battery2]
-markup=pango
-interval=120
+#[brightness]
+#command=xbacklight | cut -d'.' -f1 | awk '{print $1"%"}'
+#label=
+#interval=once
+#signal=1
+
+#[battery2]
+#markup=pango
+#interval=120
 
 [volume]
 command=v=`~/.i3blocks-contrib/volume/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
