i3 - leave a comment explaining why I have commented blocks in my i3blocks.conf

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -15,6 +15,9 @@ command=sensors | grep "Package id 0" | cut -d' ' -f5 | cut -c 2-
 label=
 interval=60
 
+# Until I find a way to conditionally display blocks, I leave the following blocks commented out.
+# These are only needed on a laptop installation, in which case I need to manually uncomment them.
+
 #[brightness]
 #command=xbacklight | cut -d'.' -f1 | awk '{print $1"%"}'
 #label=
