--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,3 +1,7 @@
+# The final i3blocks.conf file is automatically generated on the fly.
+# Everything between #laptop_being and #laptop_end comments will be removed
+# from non-laptop installations.
+
 # Global properties
 #
 # The top properties below are applied to every block, but can be overridden.
@@ -15,18 +19,19 @@ command=sensors | grep "Package id 0" | cut -d' ' -f5 | cut -c 2-
 label= 
 interval=60
 
-# Until I find a way to conditionally display blocks, I leave the following blocks commented out.
-# These are only needed on a laptop installation, in which case I need to manually uncomment them.
+#laptop_begin
 
-#[brightness]
-#command=xbacklight | cut -d'.' -f1 | awk '{print $1"%"}'
-#label= 
-#interval=once
-#signal=1
+[brightness]
+command=xbacklight | cut -d'.' -f1 | awk '{print $1"%"}'
+label= 
+interval=once
+signal=1
 
-#[battery2]
-#markup=pango
-#interval=120
+[battery2]
+markup=pango
+interval=120
+
+#laptop_end
 
 [volume]
 command=v=`~/.i3blocks-contrib/volume/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
