i3 - add an unread email entry on the status bar

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -14,6 +14,11 @@ separator_block_width=15
 label= 
 interval=5
 
+[email]
+command=$HOME/.dotfiles/i3/scripts/get_unread_email.sh
+label=
+interval=120
+
 [temperature]
 command=sensors | grep "Package id 0" | cut -d' ' -f5 | cut -c 2-
 label= 
