--- a/i3/config
+++ b/i3/config
@@ -164,11 +164,12 @@ bar {
 
 # system power menu
 set $mode_system  (T)erminate     (S)uspend     (R)eboot     (L)ock     (E)xit
+set $locker i3lock --color "#666666"
 mode "$mode_system" {
     bindsym t exec --no-startup-id systemctl poweroff -i, mode "default"
-    bindsym s exec --no-startup-id systemctl suspend, mode "default"
+    bindsym s exec --no-startup-id $locker && systemctl suspend, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym l exec --no-startup-id i3lock --color "#333333", mode "default"
+    bindsym l exec --no-startup-id $locker, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
 
     # back to normal
