i3blocks - remove mail entry and add a used RAM entry in the bar

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -14,10 +14,10 @@ separator_block_width=15
 label= 
 interval=5
 
-[email]
-command=$HOME/.dotfiles/i3/scripts/get_unread_email.sh
-label=
-interval=120
+[memory]
+command=free -h --si | awk '/^Mem/ {print $3}'
+label= 
+interval=5
 
 [temperature]
 command=sensors | grep "Package id 0" | cut -d' ' -f5 | cut -c 2-
