i3 - use pactl instead of amixer for audio stuff

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -38,11 +38,11 @@ interval=120
 
 #laptop_end
 
-[volume]
-command=v=`~/.i3blocks-contrib/volume/volume`; if [ "$v" = "MUTE" ]; then echo " ---"; else echo " $v"; fi
-instance=Master
+[volume-pulseaudio]
 interval=once
 signal=2
+AUDIO_MED_THRESH=10
+LONG_FORMAT="${SYMB}${VOL}%"
 
 [language]
 command=echo " `xkb-switch`" | awk '{print toupper($0)}'
