--- a/i3/config
+++ b/i3/config
@@ -185,9 +185,9 @@ mode "$mode_system" {
 bindsym Pause mode "$mode_system"
 
 # audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+ -q && pkill -RTMIN+2 i3blocks
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%- -q && pkill -RTMIN+2 i3blocks
-bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle -q && pkill -RTMIN+2 i3blocks
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pkill -RTMIN+2 i3blocks
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && pkill -RTMIN+2 i3blocks
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && pkill -RTMIN+2 i3blocks
 
 # screen brightness controls
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10 && pkill -RTMIN+1 i3blocks
