--- a/terminator/config
+++ b/terminator/config
@@ -1,12 +1,18 @@
 [global_config]
-  borderless = True
   dbus = False
-  title_inactive_bg_color = "#262626"
-  title_inactive_fg_color = "#595959"
-  title_receive_bg_color = "#262626"
-  title_receive_fg_color = "#595959"
   title_transmit_bg_color = "#333333"
+  title_receive_fg_color = "#595959"
+  title_receive_bg_color = "#262626"
+  title_inactive_fg_color = "#595959"
+  title_inactive_bg_color = "#262626"
 [keybindings]
+[profiles]
+  [[default]]
+    background_color = "#171717"
+    cursor_color = "#aaaaaa"
+    foreground_color = "#ebdbb2"
+    show_titlebar = False
+    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
 [layouts]
   [[default]]
     [[[child1]]]
@@ -16,9 +22,3 @@
       parent = ""
       type = Window
 [plugins]
-[profiles]
-  [[default]]
-    background_color = "#171717"
-    cursor_color = "#aaaaaa"
-    foreground_color = "#ebdbb2"
-    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
