--- a/i3/config
+++ b/i3/config
@@ -3,7 +3,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: FontAwesome 10.5
+font pango: FontAwesome
 
 title_align center
 
