i3 - use calendar from i3blocks

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -50,7 +50,9 @@ label=
 interval=once
 signal=3
 
-[time]
-command=date '+ %a %d %b %H:%M'
+[calendar]
+DATEFMT=+ %a %d %b %H:%M
 label=
 interval=60
+HEIGHT=180
+WIDTH=220
